--- a/index.html
+++ b/index.html
@@ -28,8 +28,16 @@
     </div>
     <div class="slider-controls">
       <span id="prev" class="prev">Previous</span>
-      <span id="indicators" class="indicators"><ul></ul></span>
+      <span id="indicators" class="indicators">
+        <ul></ul>
+      </span>
       <span id="next" class="next">Next</span>
+    </div>
+    <div class="options">
+      <input type="radio" name="option" id="fade" checked>
+      <label for="fade">fade</label>
+      <input type="radio" name="option" id="slide">
+      <label for="slide">slide</label>
     </div>
     <script src="main.js"></script>
   </body>
