--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       <span id="next" class="next">Next</span>
     </div>
     <div class="options">
-      <input type="radio" name="option" id="fade" checked>
+      <input type="radio" name="option" id="fade" >
       <label for="fade">fade</label>
-      <input type="radio" name="option" id="slide">
+      <input type="radio" name="option" id="slide" checked>
       <label for="slide">slide</label>
     </div>
     <script src="main.js"></script>
